# hcmus-ai-foundations--ares

./: README.md
Report/: Report.fdb_latexmk  Report.tex
Report/pages/: A_star.tex  AlgoTemplate.tex  Astar.tex  BFS.tex  Comparison.tex  (+11 more)
Source/: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt
Source/data/: gen.sh
Source/data/input/: 1.txt  gen.sh  inp.txt  input-00.txt  input-01.txt  input-02.txt  input-03.txt  input-04.txt  input-05.txt  input-06.txt  input-07.txt  input-08.txt  input-09.txt  input-10.txt  input-11.txt  input-12.txt  input-13.txt  input-14.txt  input-15.txt  input-16.txt  input-17.txt  input-18.txt  input-19.txt  input-20.txt  input-21.txt  input-22.txt  input-23.txt  input-24.txt  input-25.txt  input-26.txt  input-27.txt  input-28.txt  input-29.txt  input-30.txt  input-31.txt  input-32.txt  input-33.txt  input-34.txt  input-35.txt  input-36.txt  (+1 more)
Source/data/output/: out.txt  output-01.txt  output-02.txt  output-03.txt  output-04.txt  output-05.txt  output-06.txt  output-07.txt  output-08.txt  output-09.txt  output-10.txt  output-11.txt  output-16.txt  output-18.txt  output-19.txt  output-20.txt  output-21.txt  output-22.txt  output-23.txt  output-24.txt  output-25.txt  output-26.txt  output-27.txt  output-28.txt  output-29.txt  output-30.txt  output-31.txt  output-32.txt  output-34.txt  output-35.txt  output-36.txt
Source/md/: guide.md  installation.md  refs.md  todo.md
Source/src/algos/: __init__.py  astar.py  bfs.py  dfs.py  dijkstra.py  gbfs.py  search.py  swarm.py  ucs.py
Source/src/ares/: __init__.py  __main__.py
Source/src/config/: __init__.py
Source/src/constants/: __init__.py  enums.py  paths.py
Source/src/core/: audio.py  game.py  input.py  main.py  solver.py  test.py
Source/src/entities/: map.py  player.py
Source/src/gui/components/: __init__.py  bgm_controller.py  button.py  cursor.py  decorators.py  dialog.py  game_info.py  map_import.py  media.py  minimap.py  select.py  text.py
Source/src/gui/handlers/: cursor.py  cursor_handler.py
Source/src/states/: game_state.py  menu_state.py  settings_state.py  state.py
Source/src/utils/: __init__.py  args.py  asset_loader.py  base.py  config.py  data.py  generate.py  log.py  metrics.py
Source/tests/: test_enum.py  test_enums.py  test_utils.py
ares/: README.md  pyproject.toml
ares/src/ares/: __init__.py  __main__.py
