[project]
name = "ares"
version = "0.1.0"
description = "HCMUS AI Foundations Sokoban Project"
authors = [
    { name = "yuran1811", email = "trieuvanbd123@gmail.com" },
    { name = "KhoaNguyen-HCMUS", email = "anhkhoa515.dev@gmail.com" },
    { name = "callmezuy", email = "bmduy23@clc.fitus.edu.vn" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }
classifiers = ["Private :: Do Not Upload"]

[project.scripts]
"ares" = "ares:main"
"lv_gen" = "ares:lv_gen"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
universal = false
dev-dependencies = [
    "pytest>=8.3.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ares"]
